--- a/style.css
+++ b/style.css
@@ -1,4 +1,50 @@
-.board{
-    padding: 0.5rem 0 0;
+
+.container {
     display: flex;
-}
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .board {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .main-board {
+    width: 798px;
+  }
+  .user-board {
+    width: 504px;
+    margin-bottom: 24px;
+  }
+  .cell {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+  }
+  .t-center {
+    text-align: center;
+  }
+
+  .btn {
+    width: 10%;
+    margin-top: 20px;
+    padding: 5px;
+    background-color: #d8cccc;
+    border: none;
+  }
+  .input-field {
+    width: 10%;
+    margin-top: 20px;
+    padding: 5px;
+  }
+  input:focus {
+    outline: none;
+  }
+  .highlight {
+    background-color: #d8cccc;
+  }
